--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   fl_chart: ^0.68.0
 
   dartz: any
+  flutter_slidable: ^3.1.1
 dev_dependencies:
   flutter_test:
     sdk: flutter
