feat/dashboard: get backup data and restore backup data done without google drive functionality.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,10 @@ dependencies:
 
   dartz: any
   path_provider: ^2.1.4
+  google_sign_in: ^6.2.1
+  googleapis: ^13.2.0
+  googleapis_auth: ^1.6.0
+  http: ^1.2.2
 dev_dependencies:
   flutter_test:
     sdk: flutter
