--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -42,4 +42,7 @@
             <data android:mimeType="text/plain"/>
         </intent>
     </queries>
+    <meta-data
+        android:name="com.google.android.gms.auth.api.signin"
+        android:value="@string/default_web_client_id"/>
 </manifest>
