--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   googleapis_auth: ^1.6.0
   http: ^1.2.2
   flutter_slidable: ^3.1.1
+  visibility_detector: ^0.4.0+2
 dev_dependencies:
   flutter_test:
     sdk: flutter
