--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   http: ^1.2.2
   flutter_slidable: ^3.1.1
   visibility_detector: ^0.4.0+2
+  flutter_spinkit: ^5.2.1
 dev_dependencies:
   flutter_test:
     sdk: flutter
